Enabled embedded Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 #logging.level.org.springframework=debug
 management.endpoints.web.exposure.include=*
+#Security Disabled
 spring.security.user.name=username
 spring.security.user.password=password
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
