--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+<!-- TEMPORARILY DISABLED SECURITY
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
+-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
